<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Backgammon</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="full_name">Full Name</string>
    <string name="default_web_client_id">202948134881-dlhg8ilv0qgk2sc8sdjcgr70u0v99dkg.apps.googleusercontent.com</string>
    <string name="default_notification_channel_id">default_channel</string>
    <string name="game_notification_channel_id">game_channel</string>
</resources>